# macropad-rp2040

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
.github/workflows/: rust.yml
src/: code.py  main.rs
