[package]
name = "macropad-rp2040"
version = "0.1.0"
edition = "2024"

[dependencies]
panic-halt = "0.2"
cortex-m-rt = "0.7" # Runtime for ARM Cortex-M
cortex-m = "0.7"  # ARM Cortex-M stuff

#Hardware Access
rp2040-boot2 = "0.3"  # RP2040 bootloader
embedded-hal = { version = "1.0.0" }  # Hardware Abstraction Layer (HAL) for General Embedded Systems

#BSP
adafruit-macropad = "0.8.0"
# Use pio directly for NeoPixels to avoid version conflicts
pio = "0.2"
pio-proc = "0.2"
smart-leds = "0.4.0"

#USB HID
usbd-human-interface-device = "0.6.0"
usb-device = "0.3"

# Abort on panic instead of trying to "unwind"
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"